Ajout des liens pour les réseaux sociaux, du border lors du :focus, correction des headings, mise en place du aria, mise en place du for pour les labels, correction 2 du color contrast

--- a/style.css
+++ b/style.css
@@ -657,7 +657,7 @@ h4 {
     background-color: #7A4700;
 }
 .tc-white {
-    color: #7A4700 !important;
+    color: #fff !important;
 }
 .btn-atomic-tangerine {
     background: #7A4700;
@@ -899,4 +899,8 @@ h4 {
 }
 .bg-cover {
     background-size: cover !important;
+}
+
+:focus{
+    border: red 5px solid;
 }
